Emit ATK state-changed events for toggleable widgets on Aura Linux

* Emit checked state changed events for checkboxes and radio buttons.
* Emit pressed state changed events for toggle buttons.
* Emit indeterminate state changed events for tri-state widgets when
  their state becomes "mixed."
* Remove checkable state for toggle buttons.

R=dmazzoni@google.com

Bug: 866341
Change-Id: I10e08330408c6f783e202d2c81c6c70d19309d08
Reviewed-on: https://chromium-review.googlesource.com/1219726
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Joanmarie Diggs <joanmarie.diggs@gmail.com>
Cr-Commit-Position: refs/heads/master@{#590350}
Former-commit-id: ce4648fe0c0dddcae87f257ade6256a4cf3ee02f